--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -83,32 +83,6 @@ jobs:
           file: nodes/thuroros/Dockerfile
           tags: quay.io/mauromorales/thuroros:base-${{ github.sha }}
           push: true
-
-  protos:
-    name: Kairos Factory
-    needs: protos-base
-    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@v0.0.7
-    secrets:
-      registry_username: ${{ secrets.REGISTRY_USERNAME }}
-      registry_password: ${{ secrets.REGISTRY_PASSWORD }}
-    with:
-      base_image: quay.io/mauromorales/protos:base-${{ github.sha }}
-      model: "generic"
-      arch: "amd64"
-      version: "auto"
-      iso: true
-      grype: true
-      registry_domain: "quay.io"
-      registry_namespace: "mauromorales"
-      registry_repository: "protos"
-      summary_artifacts: true
-      kubernetes_distro: "k0s"
-      kubernetes_version: "v1.33.3+k0s.0"
-      custom_tag_format: "$VERSION"
-      custom_artifact_format: "protos-$VERSION"
-      custom_job_name_format: "protos"
-      cloud_config: nodes/protos/cloud-config.yaml
-      release: true
   noos-base:
     name: Build Base Image
     runs-on: ubuntu-24.04
@@ -132,56 +106,6 @@ jobs:
           file: nodes/noos/Dockerfile
           tags: quay.io/mauromorales/noos:base-${{ github.sha }}
           push: true
-
-  protos:
-    name: Kairos Factory
-    needs: protos-base
-    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@v0.0.7
-    secrets:
-      registry_username: ${{ secrets.REGISTRY_USERNAME }}
-      registry_password: ${{ secrets.REGISTRY_PASSWORD }}
-    with:
-      base_image: quay.io/mauromorales/protos:base-${{ github.sha }}
-      model: "generic"
-      arch: "amd64"
-      version: "auto"
-      iso: true
-      grype: true
-      registry_domain: "quay.io"
-      registry_namespace: "mauromorales"
-      registry_repository: "protos"
-      summary_artifacts: true
-      kubernetes_distro: "k0s"
-      kubernetes_version: "v1.33.3+k0s.0"
-      custom_tag_format: "$VERSION"
-      custom_artifact_format: "protos-$VERSION"
-      custom_job_name_format: "protos"
-      cloud_config: nodes/protos/cloud-config.yaml
-      release: true
-
-  thuroros:
-    name: Kairos Factory
-    needs: thuroros-base
-    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@v0.0.7
-    secrets:
-      registry_username: ${{ secrets.REGISTRY_USERNAME }}
-      registry_password: ${{ secrets.REGISTRY_PASSWORD }}
-    with:
-      base_image: quay.io/mauromorales/thuroros:base-${{ github.sha }}
-      model: "generic"
-      arch: "arm64"
-      version: "auto"
-      raw: true
-      grype: true
-      registry_domain: "quay.io"
-      registry_namespace: "mauromorales"
-      registry_repository: "thuroros"
-      summary_artifacts: true
-      custom_tag_format: "$VERSION"
-      custom_artifact_format: "thuroros-$VERSION"
-      custom_job_name_format: "thuroros"
-      cloud_config: nodes/thuroros/cloud-config.yaml
-      release: true
 
   kairos:
     name: Kairos Factory
@@ -207,7 +131,54 @@ jobs:
       custom_artifact_format: "kairos-$KAIROS_VERSION"
       custom_job_name_format: "kairos"
       release: true
-
+  protos:
+    name: Kairos Factory
+    needs: protos-base
+    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@v0.0.7
+    secrets:
+      registry_username: ${{ secrets.REGISTRY_USERNAME }}
+      registry_password: ${{ secrets.REGISTRY_PASSWORD }}
+    with:
+      base_image: quay.io/mauromorales/protos:base-${{ github.sha }}
+      model: "generic"
+      arch: "amd64"
+      version: "auto"
+      iso: true
+      grype: true
+      registry_domain: "quay.io"
+      registry_namespace: "mauromorales"
+      registry_repository: "protos"
+      summary_artifacts: true
+      kubernetes_distro: "k0s"
+      kubernetes_version: "v1.33.3+k0s.0"
+      custom_tag_format: "$VERSION"
+      custom_artifact_format: "protos-$VERSION"
+      custom_job_name_format: "protos"
+      cloud_config: nodes/protos/cloud-config.yaml
+      release: true
+  thuroros:
+    name: Kairos Factory
+    needs: thuroros-base
+    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@v0.0.7
+    secrets:
+      registry_username: ${{ secrets.REGISTRY_USERNAME }}
+      registry_password: ${{ secrets.REGISTRY_PASSWORD }}
+    with:
+      base_image: quay.io/mauromorales/thuroros:base-${{ github.sha }}
+      model: "generic"
+      arch: "arm64"
+      version: "auto"
+      raw: true
+      grype: true
+      registry_domain: "quay.io"
+      registry_namespace: "mauromorales"
+      registry_repository: "thuroros"
+      summary_artifacts: true
+      custom_tag_format: "$VERSION"
+      custom_artifact_format: "thuroros-$VERSION"
+      custom_job_name_format: "thuroros"
+      cloud_config: nodes/thuroros/cloud-config.yaml
+      release: true
   noos:
     name: Kairos Factory
     needs: noos-base
@@ -224,7 +195,7 @@ jobs:
       grype: true
       registry_domain: "quay.io"
       registry_namespace: "mauromorales"
-      registry_repository: "kairos"
+      registry_repository: "noos"
       summary_artifacts: true
       kubernetes_distro: "k0s"
       kubernetes_version: "v1.33.3+k0s.0"
