--- a/nodes/thuroros/Dockerfile
+++ b/nodes/thuroros/Dockerfile
@@ -1,4 +1,10 @@
-FROM quay.io/mauromorales/ubuntu:24.04
+FROM ubuntu:24.04
+
+RUN apt-get update && apt-get install -y \
+    # to advertise the hostname on the local network
+    avahi-daemon \
+    libnss-mdns \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get update && apt-get install -y \
     # doorbell dependencies
