point factory action to temp dockerfile.img branch

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -151,7 +151,7 @@ jobs:
   thuroros:
     name: Kairos Factory
     needs: thuroros-base
-    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@v0.0.7
+    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@dockerfile.img
     secrets:
       registry_username: ${{ secrets.REGISTRY_USERNAME }}
       registry_password: ${{ secrets.REGISTRY_PASSWORD }}
