add noos missing cloud config
Signed-off-by: Mauro Morales <contact@mauromorales.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -193,3 +193,4 @@ jobs:
       custom_tag_format: "$VERSION"
       custom_artifact_format: "noos-$VERSION"
       custom_job_name_format: "noos"
+      cloud_config: nodes/noos/cloud-config.yaml
