Add noos to run LocalAI (#3)
* add scripts to thuroros and add noos

* remove duplicates

* remove common name

* use kairos base

* split release and others

* rename to noos

Signed-off-by: Mauro Morales <contact@mauromorales.com>

* use upstream ubuntu as base for thuroros

Signed-off-by: Mauro Morales <contact@mauromorales.com>

* part of last commit

* point factory action to temp dockerfile.img branch

* add noos missing cloud config

Signed-off-by: Mauro Morales <contact@mauromorales.com>

* add local-path-provisioner

* noos configuration

* add readmes

* create a build workflow per node

---------

Signed-off-by: Mauro Morales <contact@mauromorales.com>

--- a/.github/workflows/build-protos.yaml
+++ b/.github/workflows/build-protos.yaml
@@ -1,12 +1,14 @@
-name: 'Build Homelab images'
+name: 'Build ProtOS image'
 
 on:
   push:
     branches:
       - 'main'
-    tags:
-      - 'v*'
+    paths:
+      - 'nodes/kairos/Dockerfile'
   pull_request:
+    paths:
+      - 'nodes/kairos/Dockerfile'
 
 permissions:
   contents: write
@@ -14,9 +16,8 @@ permissions:
   id-token: write
   actions: read
 jobs:
-  ubuntu:
-    name: Base Image
-    runs-on: ubuntu-latest
+  protos-base:
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -33,20 +34,20 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          platforms: linux/amd64, linux/arm64
+          platforms: linux/amd64
           file: nodes/protos/Dockerfile
-          tags: quay.io/mauromorales/ubuntu:24.04-${{ github.sha }}
+          tags: quay.io/mauromorales/protos:base-${{ github.sha }}
+          labels: "quay.expires-after=2d"
           push: true
-
   protos:
     name: Kairos Factory
-    needs: ubuntu
-    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@v0.0.7
+    needs: protos-base
+    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@v0.0.8
     secrets:
       registry_username: ${{ secrets.REGISTRY_USERNAME }}
       registry_password: ${{ secrets.REGISTRY_PASSWORD }}
     with:
-      base_image: quay.io/mauromorales/ubuntu:24.04-${{ github.sha }}
+      base_image: quay.io/mauromorales/protos:base-${{ github.sha }}
       model: "generic"
       arch: "amd64"
       version: "auto"
@@ -62,29 +63,4 @@ jobs:
       custom_artifact_format: "protos-$VERSION"
       custom_job_name_format: "protos"
       cloud_config: nodes/protos/cloud-config.yaml
-      release: true
-
-  kairos:
-    name: Kairos Factory
-    needs: ubuntu
-    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@v0.0.7
-    secrets:
-      registry_username: ${{ secrets.REGISTRY_USERNAME }}
-      registry_password: ${{ secrets.REGISTRY_PASSWORD }}
-    with:
-      base_image: quay.io/mauromorales/ubuntu:24.04-${{ github.sha }}
-      model: "generic"
-      arch: "amd64"
-      version: "auto"
-      iso: true
-      grype: true
-      registry_domain: "quay.io"
-      registry_namespace: "mauromorales"
-      registry_repository: "kairos"
-      summary_artifacts: true
-      kubernetes_distro: "k0s"
-      kubernetes_version: "v1.33.3+k0s.0"
-      custom_tag_format: "$KAIROS_VERSION"
-      custom_artifact_format: "kairos-$KAIROS_VERSION"
-      custom_job_name_format: "kairos"
-      release: true
+      image_labels: "quay.expires-after=2d"
